--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,6 @@ PORT=3000
 FRONTEND_ORIGIN=http://localhost:5173
 ADMIN_EMAIL=admin@miss-excellence.local
 ADMIN_PASSWORD=ChangeMeNow!
-MONGO_URI="mongodb+srv://heshimakob:Julienne%401997@cluster0.qx58t9x.mongodb.net/"
+MONGO_URI="mongodb+srv://stephanemugisho24_db_user:CfHCQ7Dxb5SyCPSg@cluster0.gkcrmy2.mongodb.net/?appName=Cluster0"
 
 
