--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.5.2"
@@ -27,5 +28,3 @@
     "vite": "^5.4.3"
   }
 }
-
-
